Fix: Centeralized the text with text-align center

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ button{
 
 #contact div{
     display: inline-block;
-    text-align: left;
+    text-align: center;
 }
 
 .input-form{
